Add config.properties and final commit